Bug 407805 - Oversize preset icons and other icons in other dockers
Summary: Oversize preset icons and other icons in other dockers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-21 18:11 UTC by Ahab Greybeard
Modified: 2019-05-23 12:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2019-05-21 18:11:15 UTC
SUMMARY
The May 18th appimage build (Build 487) and all following builds including the latest Build 490 krita-4.2.0-beta-1baa794-x86_64.appimage have a bug where docker icons and some lists are presented at a very large size that fills the width of the docker.
This affects the brush presets, the palettes and the Workspaces/Window Layouts.
Selecting a palette from the docker's drop down list and selecting a Workspace from the drop down list shows this immediately.
For the brush presets, see Steps To Reproduce.

STEPS TO REPRODUCE
1. In the brush presets docker wwith presentaion set to Details, select a different tag to the one currently displayed. The icon will expand to fill the width of the docker.
2. Select Thumbnails view and it goes back to normal.
3. Select Details view then select a different tag, it goes to full width icon in the docker.
4. After Quit and restart it is back to normal appearance.

OBSERVED RESULT
See above.

EXPECTED RESULT
It shouldn't happen.

SOFTWARE/OS VERSIONS
All Linux appimages from the May 18th evening build onwards.

ADDITIONAL INFORMATION
Comment 1 vanyossi 2019-05-23 02:23:37 UTC
Git commit 54db93c14a3370fd37894f152a0dd4fcef3b4b0e by Ivan Yossi.
Committed on 23/05/2019 at 02:23.
Pushed by ivany into branch 'master'.

Fix wrong height on some docker grids
Related: bug 407809
BACKPORT:krita/4.2

M  +4    -2    libs/widgets/KoTableView.cpp

https://invent.kde.org/kde/krita/commit/54db93c14a3370fd37894f152a0dd4fcef3b4b0e
Comment 2 Halla Rempt 2019-05-23 12:17:28 UTC
Git commit 4be3eb612cda2f220ee4fd00a37bcc55a4ce7693 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 23/05/2019 at 11:56.
Pushed by rempt into branch 'krita/4.2'.

Fix wrong height on some docker grids
Related: bug 407809
BACKPORT:krita/4.2
(cherry picked from commit 54db93c14a3370fd37894f152a0dd4fcef3b4b0e)

M  +4    -2    libs/widgets/KoTableView.cpp

https://invent.kde.org/kde/krita/commit/4be3eb612cda2f220ee4fd00a37bcc55a4ce7693