Fix wrong height on some docker grids

BUG:407805
BUG:407809
BACKPORT:krita/4.2